--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -7,6 +7,8 @@ html {
   background-color: #171717;
   text-align: center;
   color: white;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 body {
@@ -40,7 +42,7 @@ body {
   text-align: center;
 }
 
-button:hover {
+button:enabled:hover {
   cursor: pointer;
 }
 
